# TeyvatGuide

./: .codacy.yml  .env.production  .eslintignore  .eslintrc.yml  .gitignore  .gitmodules  .prettierignore  .prettierrc.yaml  .prettierrc.yml  .sentryclirc  .stylelintrc.yml  CHANGELOG.md  LICENSE  README.md  components.d.ts  eslint.config.js  eslint.config.mjs  index.html  latest.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qodana.yaml  tsconfig.json  tsconfig.node.json  tsdoc.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml  source_update.yml  todo.yml
.github/workflows/: build.yml  debug.yml  qodana.yaml  qodana_code_quality.yml  test.yml
.trae/rules/: git-commit-rules.md  sqlite-rules.md  typescript-rules.md
.trae/skills/git-commit-skill/: SKILL.md
.trae/skills/git-workflow/: SKILL.md  task-completion.md
.trae/skills/task-completion/: SKILL.md
.trae/skills/teyvat-guide/: SKILL.md
.trae/skills/typescript-standards/: SKILL.md  enum.md  tsdoc.md
docs/: CHANGELOG-v0.1.x.md  CHANGELOG-v0.2.x.md  CHANGELOG-v0.3.x.md  CHANGELOG-v0.4.x.md  CHANGELOG-v0.5.x.md  UIAF.md  UIGF.md  UIGF3.md  项目资源说明.md
docs/changelogs/: CHANGELOG-v0.10.x.md  CHANGELOG-v0.2.x.md  CHANGELOG-v0.3.x.md  CHANGELOG-v0.4.x.md  CHANGELOG-v0.5.x.md  CHANGELOG-v0.6.x.md  CHANGELOG-v0.7.x.md  CHANGELOG-v0.8.x.md  CHANGELOG-v0.9.x.md
docs/macos-gatekeeper/: README-EN.md  README.md  one-click.sh
docs/standards/: UIAF.md  UIGF.md
eslint/: jsonEslint.js  vueEslint.js  ymlEslint.js
macos-gatekeeper/: README-EN.md  README.md  one-click.sh
public/js/: static.geetest.com_static_js_gt.0.4.9.js
scripts/: auto-build.ts  auto-dev.ts  update-version.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: DevJson.json  Mys.json  SubWindow.json  Teyvat.Guide.json  TeyvatGuide.json
src-tauri/icons/: icon.icns
src-tauri/proto/: AchievementInfo.proto  yae.proto
src-tauri/src/: client.rs  commands.rs  lib.rs  main.rs  plugins.rs  tray.rs  utils.rs  watchdog.rs
src-tauri/src/client/: menu.rs  mod.rs  utils.rs
src-tauri/src/plugins/: custom_log.rs  mod.rs  text_scale.rs
src-tauri/src/yae/: cmd_parse.rs  inject.rs  mod.rs  pipe.rs  proto.rs  pt_ac.rs  pt_store.rs
src/assets/: index.css  index.scss
src/assets/css/: anno-parser.css  mys-parser.css  post-parser.css  utils.css
src/assets/fonts/: index.css  index.scss
src/assets/styles/: github.styles.scss  sentry.custom.scss  utils.scss
src/assets/themes/: dark.css  dark.scss  default.css  default.scss
src/components/: Greet.vue  t-backTop.vue  t-calendar-material.vue  t-calendar.vue  t-confirm.vue  t-loading.vue  t-mini-avatar.vue  t-mini-weapon.vue  t-pool.vue  t-position.vue  t-sidebar.vue  t-switchTheme.vue
src/components/anno/: ta-parser.vue
src/components/app/: t-appBadge.vue  t-backTop.vue  t-gameNav.vue  t-gameNavItem.vue  t-gamenav.vue  t-item-box.vue  t-itemBox.vue  t-json.vue  t-mi-img.vue  t-overlay.vue  t-pinWin.vue  t-postWidth.vue  t-postcard.vue  t-setCollect.vue  t-shareBtn.vue  t-sidebar.vue  t-subline.vue  t-switchTheme.vue  to-livecode.vue  to-nameCard.vue  to-namecard.vue  to-switchAc.vue  top-nameCard.vue  top-namecard.vue
src/components/config/: tc-appBadge.vue  tc-dataDir.vue  tc-gameBadge.vue  tc-info.vue  tc-userBadge.vue
src/components/devCharacter/: duc-detail-olb.vue  duc-detail-olt.vue  duc-detail-ort.vue  duc-detail-overlay.vue  duc-detail-relic.vue  duc-detail-relics.vue
src/components/func/: confirm.ts  confirm.vue  dialog.ts  dialog.vue  geetest.ts  geetest.vue  hyperlink.ts  hyperlink.vue  loading.ts  loading.vue  snackbar.ts  snackbar.vue
src/components/gachaRecord/: gr-echarts.vue  gr-overview.vue  gro-cloud.vue  gro-data-line.vue  gro-dataview.vue  gro-echarts.vue  gro-history.vue  gro-overview.vue  gro-table.vue  gro-timeline.vue
src/components/home/: t-calendar-birth.vue  t-calendar.vue  t-homecard.vue  t-pool.vue  t-position.vue
src/components/hutaoAbyss/: hta-overlay-overview.vue  hta-overview-line.vue  hta-tab-hold.vue  hta-tab-team.vue  hta-tab-up.vue  hta-tab-use.vue  hta-team-line.vue  tib-wiki-abyss.vue
src/components/itembox/: tib-abyss-detail.vue  tib-abyss-overview.vue  tib-calendar-avatar.vue  tib-calendar-item.vue  tib-calendar-material.vue  tib-calendar-weapon.vue  (+5 more)
src/data/: Achievement.json  AchievementGoal.json  achievementSeries.json  achievements.json  index.ts
src/enum/: anno.ts  app.ts  bbs.ts  dailyNote.ts  game.ts  staticData.ts  uiaf.ts  yae.ts
src/hooks/: reachBottom.ts
src/interface/: Achievements.ts  Base.ts  Calendar.ts  GCG.ts  MysPost.ts  NameCard.ts  UIAF.ts
src/pages/: Achievements.vue  Announcements.vue  Config.vue  Dev.vue  GCG.vue  Home.vue  News.vue  Test.vue  User.vue
src/request/: apiHubReq.ts  bbsReq.ts  hakushReq.ts  hk4eReq.ts  lunaReq.ts  miscReq.ts  otherReq.ts  painterReq.ts  passportReq.ts  postReq.ts  recordReq.ts  takumiReq.ts  topicReq.ts
src/router/: index.ts  routes.ts
src/store/: index.ts
src/tools/: svg-inject.js
src/types/: Achievement.d.ts  Announcement.d.ts  BBS.d.ts  Base.d.ts  Calendar.d.ts  Character.d.ts  Enka.d.ts  GCG.d.ts  Gacha.d.ts  Game.d.ts  Material.d.ts  NameCard.d.ts  UserRequest.d.ts  UserResponse.d.ts  WIKI.d.ts  Weapon.d.ts
src/utils/: Github.ts  Hakushi.ts  MysParse.ts  TGBbs.ts  TGBuild.ts  TGClient.ts  TGGame.ts  TGHttp.ts  TGHttps.ts  TGIndex.ts  TGLogger.ts  TGMap.ts  TGNotify.ts  TGShare.ts  TGShell.ts  TGSql.ts  TGSqlite.ts  TGWindow.ts  UIAF.ts  UIGF.ts  Yae.ts  Yatta.ts  acUtils.ts  annoParser.ts  birthParser.ts  colorFunc.ts  dataBS.ts  gachaCharts.ts  getRequestHeader.ts  linkParser.ts  merge.ts  minifySql.ts  rateLimiter.ts  relicUtils.ts  saveImg.ts  t2D.ts  toolFunc.ts  weaponUtils.ts  wikiUtils.ts
src/views/: t-anno-json.vue  t-anno.vue  t-lottery.vue  t-news.vue  t-post-json.vue  t-post.vue  tw-character.vue  tw-weapon.vue
(+1104 files in other folders)
