[package]
name = "TeyvatGuide"
version = "0.8.6"
description = "Game Tool for Genshin Impact player"
authors = ["BTMuli <bt-muli@outlook.com>"]
license = "MIT"
repository = "https://github.com/BTMuli/TeyvatGuide"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "teyvat_guide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.13.4"
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
chrono = "0.4.42"
lazy_static = "1.5.0"
log = "0.4.28"
prost = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.3", features = [] }
tauri-utils = "2.8.0"
tokio = { version = "1.42.0", features = ["rt", "sync"] }
url = "2.5.7"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_System_Pipes", "Win32_Storage_FileSystem"] }

# deep link 插件
[dependencies.tauri-plugin-deep-link]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# dialog 插件
[dependencies.tauri-plugin-dialog]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# fs 插件
[dependencies.tauri-plugin-fs]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# http 插件
[dependencies.tauri-plugin-http]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"
features = ["unsafe-headers"]

# log 插件
[dependencies.tauri-plugin-log]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# opener 插件
[dependencies.tauri-plugin-opener]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# os 插件
[dependencies.tauri-plugin-os]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# process 插件
[dependencies.tauri-plugin-process]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# shell 插件
[dependencies.tauri-plugin-shell]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# single-instance 插件
[dependencies.tauri-plugin-single-instance]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# sqlite 插件
[dependencies.tauri-plugin-sql]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"
features = ["sqlite"]
