[package]
name = "TeyvatGuide"
version = "0.8.8"
description = "Game Tool for Genshin Impact player"
authors = ["BTMuli <bt-muli@outlook.com>"]
license = "MIT"
repository = "https://github.com/BTMuli/TeyvatGuide"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "teyvat_guide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
chrono = "0.4.42"
log = "0.4.29"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.4", features = ["tray-icon"] }
tauri-utils = "2.8.1"
url = "2.5.7"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]

# deep link 插件
[dependencies.tauri-plugin-deep-link]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# dialog 插件
[dependencies.tauri-plugin-dialog]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# fs 插件
[dependencies.tauri-plugin-fs]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# http 插件
[dependencies.tauri-plugin-http]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"
features = ["unsafe-headers"]

# log 插件
[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# opener 插件
[dependencies.tauri-plugin-opener]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# os 插件
[dependencies.tauri-plugin-os]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# process 插件
[dependencies.tauri-plugin-process]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# shell 插件
[dependencies.tauri-plugin-shell]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# single-instance 插件
[dependencies.tauri-plugin-single-instance]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# sqlite 插件
[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"
features = ["sqlite"]
