[package]
name = "TeyvatGuide"
version = "0.9.1"
description = "Game Tool for Genshin Impact player"
authors = ["BTMuli <bt-muli@outlook.com>"]
license = "MIT"
repository = "https://github.com/BTMuli/TeyvatGuide"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "teyvat_guide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
chrono = "0.4.43"
image = "0.25.9"
log = "0.4.29"
prost = "=0.14.1"
prost-types = "=0.14.1"
sentry = { version = "0.46.1", features = ["backtrace", "panic"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-utils = "2.8.1"
tauri-plugin-machine-uid = "0.1.3"
url = "2.5.8"
walkdir = "2.5.0"
widestring = "1.2.1"

[target.'cfg(windows)'.dependencies.winreg]
version = "0.55.0"
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_UI_HiDpi",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_WindowsProgramming",
]

# cli 插件
[dependencies.tauri-plugin-cli]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# deep link 插件
[dependencies.tauri-plugin-deep-link]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# dialog 插件
[dependencies.tauri-plugin-dialog]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# fs 插件
[dependencies.tauri-plugin-fs]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# http 插件
[dependencies.tauri-plugin-http]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"
features = ["unsafe-headers"]

# log 插件
[dependencies.tauri-plugin-log]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# notification 插件
[dependencies.tauri-plugin-notification]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# opener 插件
[dependencies.tauri-plugin-opener]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# os 插件
[dependencies.tauri-plugin-os]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# process 插件
[dependencies.tauri-plugin-process]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# single-instance 插件
[dependencies.tauri-plugin-single-instance]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# sqlite 插件
[dependencies.tauri-plugin-sql]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
branch = "v2"
features = ["sqlite"]
